# telebot-habits

./: .env.template  Dockerfile  README.md  docker-compose.yml  functions.py  loader.py  main.py  notifications.py  pyproject.toml
app/: database.py  functions.py  main.py  pydentic_models.py  routes.py
app/authorization/: config.py  database.py  functions.py  pydentic_models.py  routes.py
bot/: config.py  functions.py  main.py  notifications.py  states.py
bot/handlers/: __init__.py
bot/handlers/cb_add_habit/: message.py
bot/handlers/cb_forgot/: __init__.py  messege.py
bot/handlers/cb_login/: __init__.py  keyboard.py  message.py
bot/handlers/cb_notifications/: keyboard.py  message.py
bot/handlers/cb_registration/: __init__.py  keyboard.py  message.py
bot/handlers/cb_show_habits/: keyboard.py  message.py
bot/handlers/cb_today/: message.py
bot/handlers/count_days/: message.py
bot/handlers/delete_habit/: message.py
bot/handlers/done/: message.py
bot/handlers/help/: message.py
handlers/: __init__.py
handlers/cb_add_habit/: message.py
handlers/cb_forgot/: __init__.py  messege.py
handlers/cb_login/: message.py
handlers/cb_notifications/: keyboard.py  message.py
handlers/cb_registration/: message.py
handlers/cb_show_habits/: keyboard.py  message.py
handlers/cb_today/: message.py
handlers/count_days/: message.py
handlers/delete_habit/: message.py
handlers/done/: message.py
handlers/help/: message.py
handlers/settings/: settings.py
handlers/start/: __init__.py  keyboard.py
handlers/update_habit/: message.py
(+5 files in other folders)
