[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standart"], version = "^0.34.3"}
pytelegrambotapi = "^4.27.0"
pydantic-settings = "^2.9.1"
asyncio = "^3.4.3"
aiohttp = "^3.12.13"
python-dotenv = "^1.1.0"
sqlalchemy = "^2.0.41"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
asyncpg = "^0.30.0"
python-multipart = "^0.0.20"
bcrypt = "^4.3.0"
apscheduler = "=3.11.0"
